save draft model to the database